Moved resources to resources folder, tests now working. Ignore generated files (may be later generate them in build dir).